# ludum-dare-49

./: .gitignore  CODEOWNERS  Cargo.toml  Cross.toml  DEVELOPERS.md  README.md  rust-toolchain.toml  savegame.json
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml
bundle/docker/: x86_64-unknown-linux-gnu.dockerfile
game/: Cargo.toml  build.rs
game/assets/configs/: application.json  discord.json  final_shader.json
game/assets/levels/: levels.json
game/assets/levels/common/tiles/: Platform.tsx  Sin título-3.psd  Sin título-4.psd
game/assets/levels/level_0/: colliders.json  level_0.tmx  untitled.tmx  zones.json
game/assets/levels/level_1/: Level_2.psd  colliders.json  level0.xcf  level_0.tmx  zones.json
game/assets/levels/level_2/: Glitch Platform 1.tsx  Level_2.psd  Level_3.psd  colliders.json  level_0.tmx  moreTiles.tsx  zones.json
game/assets/levels/level_3/: Level_3.psd  colliders.json  fourth_level.psd  level_3.psd  tiles.tsx  zones.json
game/assets/levels/level_4/: colliders.json  level_4.psd  platforms.xcf  zones.json
game/assets/levels_tmx/: abwsx3mzcgs21.tsx  test_map.tmx  tilemap1.tsx
game/assets/shaders/: pixelart.fs
game/src/: context.rs  discord_rpc.rs  lib.rs  progress.rs
game/src/character/: collisions.rs  mod.rs  render.rs
game/src/gfx/: mod.rs  render_layer.rs
game/src/gfx/util/: scene.rs
game/src/scenes/: cheater_screen.rs  death_screen.rs  fsm_error_screen.rs  how_to_play_screen.rs  level_select_screen.rs  loading_screen.rs  main_menu_screen.rs  mod.rs  next_level_screen.rs  options_screen.rs  pause_screen.rs  win_screen.rs
game/src/scenes/ingame_scene/: hud.rs  mod.rs  update.rs  world.rs
game/src/scenes/ingame_scene/level/: loader.rs  mod.rs
game/src/shaders/: shader.rs
game/src/shaders/util/: dynamic_screen_texture.rs  render_texture.rs
game/src/utilities/: anim_render.rs  audio_player.rs  datastore.rs  discord.rs  ffi_logging.rs  game_config.rs  game_version.rs  map_loader.rs  math.rs  mod.rs  non_ref_raylib.rs  render_layer.rs  reusable_button.rs  statemachine.rs  world_paint_texture.rs
game/src/utilities/discord/: config.rs  mod.rs  rpc.rs
game/src/utilities/shaders/: mod.rs  shader.rs
game/src/utilities/shaders/util/: dynamic_screen_texture.rs  mod.rs  render_texture.rs
wrapper/: Cargo.toml  README.md
wrapper/src/: main.rs
