[package]
name = "game"
publish = false
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cgmath = "0.18"
discord-sdk = { version = "0.2.1", git = "https://github.com/EmbarkStudios/discord-sdk", rev = "2c56fe530120487d21bcd307bdf2e1055ce0ad48" }
tokio = { version = "1.0", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0"
chrono = "0.4"
rust-embed = "6.2.0"
raylib = "3.5"
puffin = "0.9"
puffin_http = "0.6"
dirty-fsm = "^0.2.1"
num-traits = "0.2"
sentry = "0.23"

[dev-dependencies]
puffin_viewer = "0.6"
