[package]
name = "game"
publish = false
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cgmath = "0.18"
discord-sdk = { version = "0.2.1", git = "https://github.com/EmbarkStudios/discord-sdk", rev = "2c56fe530120487d21bcd307bdf2e1055ce0ad48" }
tokio = { version = "1.0", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0"
chrono = "0.4"
rust-embed = "6.2.0"
raylib = { version = "3.5", git = "https://github.com/ewpratten/raylib-rs", rev = "2ae949cb3488dd1bb052ece71d61021c8dd6e910", features = [
    "serde"
] }
puffin = "0.9"
puffin_http = "0.6"
dirty-fsm = "^0.2.2"
num-traits = "0.2"
sentry = "0.23"
image = "0.23"
tempfile = "3.2"
approx = "0.5"
pkg-version = "1.0"
cfg-if = "1.0"
num-derive = "0.3"
num = "0.4"
tiled = { version  ="0.9.5", default-features = false }

[dev-dependencies]
puffin_viewer = "0.6"

[build-dependencies]
vergen = "5"
anyhow = "1.0"
