[package]
name = "wrapper"
publish = false
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game =  { version = "0.1", path = "../game"}
tracing-subscriber = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }